objects/Outcome__c.object
<CustomObject>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <formula>Relationship_Interaction__r.Assigned_To__r.FirstName + &quot; &quot; + Relationship_Interaction__r.Assigned_To__r.LastName</formula>
        <label>Assigned To</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Relationship_Interaction__r.Primary_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <formula>Relationship_Interaction__r.Institution__r.Name</formula>
        <label>Institution</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interaction_End_Date_Time__c</fullName>
        <formula>Relationship_Interaction__r.End_Date_Time__c</formula>
        <label>Interaction End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Interaction_Start_Date_Time__c</fullName>
        <formula>Relationship_Interaction__r.Start_Date_Time__c</formula>
        <label>Interaction Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Outcome_Type__c</fullName>
        <label>Outcome Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Relationship_Interaction__r.Primary_Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>Relationship_Interaction__r.Primary_Contact__r.FirstName + &quot; &quot; + Relationship_Interaction__r.Primary_Contact__r.LastName</formula>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Interaction__c</fullName>
        <label>Relationship Interaction</label>
        <referenceTo>Relationship_Interaction__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Result_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result: Interaction</label>
        <referenceTo>Relationship_Interaction__c</referenceTo>
        <relationshipLabel>Outcomes (Result: Interaction)</relationshipLabel>
        <relationshipName>Outcomes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result_Warm_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result: Warm Lead</label>
        <referenceTo>Warm_Lead__c</referenceTo>
        <relationshipLabel>Outcomes</relationshipLabel>
        <relationshipName>Outcomes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Relationship_Interaction__r.Status__c</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Relationship_Interaction__r.Primary_Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Outcome</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Outcome Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outcomes</pluralLabel>
    <recordTypes>
        <fullName>Other_Outcome</fullName>
        <active>true</active>
        <description>All other Outcomes not captured by a specific record type</description>
        <label>Other Outcome</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Lead_OAB</fullName>
        <active>true</active>
        <description>Outcome of the Relationship Interaction is the opening or furthering of a commercial pursuit (passed as a Warm Lead)</description>
        <label>Product Lead (OAB)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Relationship_Interaction</fullName>
        <active>true</active>
        <description>Outcome of the Relationship Interaction is an additional/subsequent Relationship Interaction</description>
        <label>Relationship Interaction</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Outcome_Other_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   RecordType.DeveloperName ==  $Label.Outcome_RT_Dev_Name,
   OR(
     ISBLANK( Outcome_Type__c ),
     ISBLANK( Description__c )
   )
)</errorConditionFormula>
        <errorMessage>At least one of the required fields is missing a value.</errorMessage>
    </validationRules>
</CustomObject>